--- a/application/admin/view/layout.html
+++ b/application/admin/view/layout.html
@@ -48,7 +48,7 @@
 					</li>
 					<li class="fl topbar-info-item">
 						<div class="dropdown">
-							<a href="http://www.goodjob.com/admin/auth/checkout" class="topbar-btn">
+							<a href="__ADMIN__SITE__/auth/checkout" class="topbar-btn">
 							<span class="fl text-normal">退出登陆</span>
 							</a>
 						</div>
