--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -298,14 +298,14 @@
    <div class="bs-module"> 
     <div class="customerimage-default "> 
      <div class="imgplace zx_imgplace"> 
-      <a href="http://weibo.com/5284689161/profile?topnav=1&amp;wvr=6" target="_blank" class="cusimglink"><img src="__STATIC__/images/104003_medias_2015630_2015630141029143.jpg" class="cusimg" /></a> 
+      <a href="javascript:;" target="_blank" class="cusimglink"><img src="__STATIC__/images/104003_medias_2015630_2015630141029143.jpg" class="cusimg" /></a> 
      </div> 
     </div> 
    </div> 
    <!--module:customerimage end--> 
   </div> 
   <div class="footer">
-   <span> &copy;2015&nbsp;&nbsp;51talk&nbsp;&nbsp;京ICP备05051632号 京公网安备110108002767号 &nbsp;Powered by&nbsp;<a href="http://www.beisen.com" class="footerlogo" target="_blank"></a> </span> 
+   <span> &copy;2015&nbsp;&nbsp;51talk&nbsp;&nbsp;京ICP备05051632号 京公网安备110108002767号 &nbsp;Powered by&nbsp;<a href="javascript:;" class="footerlogo" target="_blank"></a> </span> 
   </div>  
   <script type="text/javascript">
         require([
