--- a/application/index/view/index/new.html
+++ b/application/index/view/index/new.html
@@ -246,7 +246,7 @@
    {/foreach}
   </div> 
   <div class="footer">
-   <span>&copy;2015&nbsp;&nbsp;51talk&nbsp;&nbsp;京ICP备05051632号 京公网安备110108002767号 &nbsp;Powered by&nbsp;<a href="__STATIC__/http://www.beisen.com" class="footerlogo" target="_blank"></a></span>
+   <span>&copy;2015&nbsp;&nbsp;51talk&nbsp;&nbsp;京ICP备05051632号 京公网安备110108002767号 &nbsp;Powered by&nbsp;<a href="javascript:;" class="footerlogo" target="_blank"></a></span>
   </div>  
  </body>
 </html>
