--- a/application/index/view/success/success.html
+++ b/application/index/view/success/success.html
@@ -86,7 +86,7 @@
     <div class="bs-module"> 
      <div class="internalrecommend-default "> 
       <div class="internaldiv"> 
-       <a class="internal" href="__STATIC__/http://neitui.zhiye.com/51talk" target="_blank"><b>内部推荐专区</b></a> 
+       <a class="internal" href="javascript:;" target="_blank"><b>内部推荐专区</b></a> 
       </div> 
      </div> 
     </div> 
