--- a/application/index/view/user/11111.html
+++ b/application/index/view/user/11111.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>XformCheck邮箱、中文、手机号和数字实时验证</title>
+  <title>用户注册</title>
   <meta name="description" content="XformCheck表单验证插件支持多种输入框类型验证，里面包含邮箱email、中文、手机号和数字验证。" />
   <style type="text/css">
     *{margin:0;padding:0;list-style-type:none;font-size:12px;}
@@ -99,36 +99,7 @@
             $("#repassword").blur(function(){
               checkRepassword();
             });
-
-              //对整体进行请求验证
-        //       $("#sub").click(function() {
-        //     $.ajax({
-        //         type: 'post',
-        //         url: 'http://www.goodjob.com/index/Auth/doRegister',
-        //         dataType: 'json',
-        //         async: false,
-        //         data: {
-        //             email: $("#username").val(),
-        //             password: $("#password").val(),
-        //             repasssword:$("#repasssword").val(),
-        //             Code:$("#Code").val(),
-        //            // user_type:$("#type").val()
-        //         },
-        //         success: function(data) {
-        //             // alert(data.msg);
-        //              alert(1);
-        //             $("#img").next().html('<font color="#fff">'+data.msg+'</font>');
-
-        //            // window.location.href="http://www.goodjob.com/index/index/succ";
-        //             // if (data.status) {
-        //             //   alert(data.msg);
-        //             // } else {
-        //             //   // alert(data.msg);
-        //             // }   
-        //         }
-        //     });
-        //     return false;
-        // });
+       
       });
     </script>
   </head>
