--- a/application/index/view/user/login.html
+++ b/application/index/view/user/login.html
@@ -3,7 +3,7 @@
     <head>
 
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>XformCheck邮箱、中文、手机号和数字实时验证</title>
+        <title>普通用户登陆</title>
         <meta name="description" content="XformCheck表单验证插件支持多种输入框类型验证，里面包含邮箱email、中文、手机号和数字验证。" />
         <style type="text/css">
             *{margin:0;padding:0;list-style-type:none;font-size:12px;}
