--- a/application/index/view/index/news_detail.html
+++ b/application/index/view/index/news_detail.html
@@ -174,7 +174,7 @@
    </div> 
   </div> 
   <div class="footer">
-   <span>&copy;2015&nbsp;&nbsp;51talk&nbsp;&nbsp;京ICP备05051632号 京公网安备110108002767号 &nbsp;Powered by&nbsp;<a href="http://www.beisen.com" class="footerlogo" target="_blank"></a></span>
+   <span>&copy;2015&nbsp;&nbsp;51talk&nbsp;&nbsp;京ICP备05051632号 京公网安备110108002767号 &nbsp;Powered by&nbsp;<a href="javascript:;" class="footerlogo" target="_blank"></a></span>
   </div>  
 
  </body>
