--- a/application/index/view/index/search.html
+++ b/application/index/view/index/search.html
@@ -260,7 +260,7 @@
    <div class="bs-module"> 
     <div class="customerimage-default "> 
      <div class="imgplace zx_imgplace"> 
-      <a href="__STATIC__/http://weibo.com/5284689161/profile?topnav=1&amp;wvr=6" target="_blank" class="cusimglink"><img src="__STATIC__/images/104003_medias_2015630_2015630141029143.jpg" class="cusimg" /></a> 
+      <a href="javascript:;" target="_blank" class="cusimglink"><img src="__STATIC__/images/104003_medias_2015630_2015630141029143.jpg" class="cusimg" /></a> 
      </div> 
     </div> 
    </div> 
