--- a/application/admin/view/index/message.html
+++ b/application/admin/view/index/message.html
@@ -4,10 +4,11 @@
 		<div class="manage-head">
 			<h6 class=" padding-left manage-head-con "><b>消息中心</b></h6>
 		</div>
+		<div id="subm">
 		<button id="btn" type="button" class="btn btn-primary" style="position:absolute;top:7px;right:30px">发布公告</button>
+		</div>
 		<script>
-			$("#btn").click(function(){
-
+			$("#subm").click(function(){
 				window.location.href = '__ADMIN__SITE__/Position/content';
 			});
 		</script>
