--- a/application/index/view/user/login.html
+++ b/application/index/view/user/login.html
@@ -77,7 +77,7 @@
         </script>
     </head>
     <body >
-    <div style="text-align:center;font-size:50px;font-weight:bold;">欢迎登陆</div>
+    <div style="text-align:center;font-size:50px;font-weight:bold;color:#fff;">欢迎登陆</div>
         <form action ="{:url('index/Auth/doLogin')}" method="post">
             <ul class="formbox">
                 <li>
@@ -92,7 +92,7 @@
                     <img src="{:captcha_src()}" class="Image" id="img" onclick="show()" style="position:absolute;left:1124px;top:336px;"/><div class="verify" ></div>
                 </li>
                 
-                <span onclick="show()" style="cursor: pointer; color:black;text-decoration:none;margin-top:150px;margin-left:227px">刷新一下?</span>
+                <span onclick="show()" style="cursor: pointer; color:#fff;text-decoration:none;margin-top:150px;margin-left:227px">刷新一下?</span>
 
                <!-- <span style="cursor: pointer; color:black;text-decoration:none;margin-top:150px;margin-left:227px">找回密码?</span> -->
             </ul> 
